# Atelier_CMAKE

.github/workflows/: tests.yml
src/: CMakeLists.txt  main.c
src/lib/: calculator.c
